[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scene/Swim/Beach.gd" type="Script" id=1]
[ext_resource path="res://src/Actor/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Object/Joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scene/Swim/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Object/Transition.tscn" type="PackedScene" id=6]

[node name="Beach" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 70.3314, 128.603, 709.0 ]
}

[node name="Joystick" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="Transition" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." groups=["swimmers"] instance=ExtResource( 2 )]
position = Vector2( 705, 475 )
selectedAnimation = "swimming"

[node name="swimmer" parent="." groups=["swimmers"] instance=ExtResource( 2 )]
position = Vector2( 713, 673 )
selectedColor = 1
selectedAnimation = "swimming"

[node name="swimmer2" parent="." groups=["swimmers"] instance=ExtResource( 2 )]
position = Vector2( 706, 885 )
selectedColor = 2
selectedAnimation = "swimming"

[node name="swimmer3" parent="." groups=["swimmers"] instance=ExtResource( 2 )]
position = Vector2( 713, 209 )
selectedColor = 3
selectedAnimation = "swimming"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player"]
[editable path="swimmer"]
[editable path="swimmer2"]
[editable path="swimmer3"]
